// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GithubStatsComponent component Should render the GithubStatsComponent component 1`] = `
<DocumentFragment>
  <main
    class="o-main"
  >
    <section
      class="c-section c-section--stats"
      id="stats"
    >
      <header
        class="c-section__header"
      >
        <div
          class="o-shell"
        >
          <div
            class="c-section__animation"
            style="width: 150px; height: 150px; margin-left: auto; margin-right: auto;"
          />
          <h2>
            Stats
          </h2>
        </div>
      </header>
      <div
        class="c-section__entry c-section__entry--no-background"
      >
        <div
          class="o-shell"
        >
          <h3>
            Github profile statistics
          </h3>
          <ul
            class="c-section__list"
          >
            <li>
              <span>
                Used languages:
              </span>
              <strong>
                Javascript, Typescript
              </strong>
            </li>
            <li>
              <span>
                Followers:
              </span>
              <strong>
                50
              </strong>
            </li>
            <li>
              <span>
                Following:
              </span>
              <strong>
                154
              </strong>
            </li>
            <li>
              <span>
                Joined date:
              </span>
              <strong>
                Mock date
              </strong>
            </li>
            <li>
              <span>
                Updated at:
              </span>
              <strong>
                Mock date
              </strong>
            </li>
            <li>
              <span>
                Last active:
              </span>
              <strong>
                Mock date
              </strong>
            </li>
            <li>
              <span>
                Total repositories:
              </span>
              <strong>
                2
              </strong>
            </li>
            <li>
              <span>
                Private repositories:
              </span>
              <strong>
                5
              </strong>
            </li>
            <li>
              <span>
                Public repositories:
              </span>
              <strong>
                47
              </strong>
            </li>
            <li>
              <span>
                Organizations repositories:
              </span>
              <strong>
                -50
              </strong>
            </li>
            <li>
              <span>
                Total gists:
              </span>
              <strong>
                28
              </strong>
            </li>
            <li>
              <span>
                Private gists:
              </span>
              <strong>
                8
              </strong>
            </li>
            <li>
              <span>
                Public gists:
              </span>
              <strong>
                20
              </strong>
            </li>
            <li>
              <span>
                Total contributions:
              </span>
              <strong>
                301
              </strong>
            </li>
            <li>
              <span>
                Total stars:
              </span>
              <strong>
                4
              </strong>
            </li>
            <li>
              <span>
                Total issues:
              </span>
              <strong>
                3
              </strong>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="c-section__entry"
      >
        <small
          class="c-section__stamp"
        >
          Last updated: Mock date
        </small>
        <div
          class="o-shell"
        >
          <h3>
            Github contributions calendar
          </h3>
          <div
            class="c-calendar__outer"
          >
            <div
              class="c-calendar c-calendar--github"
            >
              <div>
                Mocked Github Calendar
              </div>
            </div>
          </div>
          <div
            class="c-skyline"
          >
            <nav
              class="c-skyline__nav"
            >
              <h4>
                Previous years Github contributions 
                <br />
                <small>
                  (requires WebGL)
                </small>
              </h4>
              <ul>
                <li>
                  <button
                    class="c-btn c-btn--small"
                  >
                    2013
                  </button>
                </li>
                <li>
                  <button
                    class="c-btn c-btn--small"
                  >
                    2014
                  </button>
                </li>
                <li>
                  <button
                    class="c-btn c-btn--small"
                  >
                    2015
                  </button>
                </li>
                <li>
                  <button
                    class="c-btn c-btn--small"
                  >
                    2016
                  </button>
                </li>
                <li>
                  <button
                    class="c-btn c-btn--small"
                  >
                    2017
                  </button>
                </li>
                <li>
                  <button
                    class="c-btn c-btn--small"
                  >
                    2018
                  </button>
                </li>
                <li>
                  <button
                    class="c-btn c-btn--small"
                  >
                    2019
                  </button>
                </li>
                <li>
                  <button
                    class="c-btn c-btn--small"
                  >
                    2020
                  </button>
                </li>
                <li>
                  <button
                    class="c-btn c-btn--small"
                  >
                    2021
                  </button>
                </li>
                <li>
                  <button
                    class="c-btn c-btn--small"
                  >
                    2022
                  </button>
                </li>
              </ul>
            </nav>
          </div>
        </div>
      </div>
      <div
        class="c-section__actions"
      >
        <button
          class="c-btn"
          type="button"
        >
          Get in touch
        </button>
        <ul
          class="c-section__actions-list"
        >
          <li>
            <button
              class="c-btn c-section__actions-close"
              type="button"
            >
              Close
            </button>
          </li>
          <li>
            <button
              class="c-btn"
              type="button"
            >
              <svg
                class="c-section__actions-icon"
              >
                <use
                  xlink:href="#svg-email"
                />
              </svg>
              <span>
                Contact me
              </span>
              <strong>
                directly
              </strong>
            </button>
          </li>
          <li>
            <a
              class="c-btn"
              href="https://app.usebraintrust.com/talent/782/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                class="c-section__actions-icon"
              >
                <use
                  xlink:href="#svg-braintrust"
                />
              </svg>
              <span>
                Hire me on
              </span>
              <strong>
                Braintrust
              </strong>
              <svg
                class="c-svg-external-link"
              >
                <use
                  xlink:href="#svg-external-link"
                />
              </svg>
            </a>
          </li>
          <li>
            <a
              class="c-btn"
              href="https://www.toptal.com/resume/atanas-atanasov"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                class="c-section__actions-icon"
              >
                <use
                  xlink:href="#svg-toptal"
                />
              </svg>
              <span>
                Hire me on
              </span>
              <strong>
                Toptal
              </strong>
              <svg
                class="c-svg-external-link"
              >
                <use
                  xlink:href="#svg-external-link"
                />
              </svg>
            </a>
          </li>
        </ul>
        <br
          class="visible-xs-block"
        />
        <a
          class="c-btn"
          href="/stats"
        >
          Go back
        </a>
      </div>
    </section>
  </main>
</DocumentFragment>
`;

exports[`GithubStatsComponent component Should unmount the GithubStatsComponent component 1`] = `<DocumentFragment />`;

exports[`GitlabStatsComponent component Should render the GitlabStatsComponent component 1`] = `
<DocumentFragment>
  <main
    class="o-main"
  >
    <section
      class="c-section c-section--stats"
      id="stats"
    >
      <header
        class="c-section__header"
      >
        <div
          class="o-shell"
        >
          <div
            class="c-section__animation"
            style="width: 150px; height: 150px; margin-left: auto; margin-right: auto;"
          />
          <h2>
            Stats
          </h2>
        </div>
      </header>
      <div
        class="c-section__entry c-section__entry--no-background"
      >
        <div
          class="o-shell"
        >
          <h3>
            Gitlab profile statistics
          </h3>
          <ul
            class="c-section__list"
          >
            <li>
              <span>
                Used languages:
              </span>
              <strong>
                Javascript, HTML, CSS, PHP, Shell
              </strong>
            </li>
            <li>
              <span>
                Joined date:
              </span>
              <strong>
                Mock date
              </strong>
            </li>
            <li>
              <span>
                Last active:
              </span>
              <strong>
                Mock date
              </strong>
            </li>
            <li>
              <span>
                Last year contributions:
              </span>
              <strong>
                105
              </strong>
            </li>
            <li>
              <span>
                Total repositories:
              </span>
              <strong>
                1
              </strong>
            </li>
            <li>
              <span>
                Public repositories:
              </span>
              <strong>
                0
              </strong>
            </li>
            <li>
              <span>
                Private repositories:
              </span>
              <strong>
                1
              </strong>
            </li>
            <li>
              <span>
                Personal repositories:
              </span>
              <strong>
                0
              </strong>
            </li>
            <li>
              <span>
                Organizations repositories:
              </span>
              <strong>
                1
              </strong>
            </li>
            <li>
              <span>
                Total stars:
              </span>
              <strong>
                0
              </strong>
            </li>
            <li>
              <span>
                Total issues:
              </span>
              <strong>
                0
              </strong>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="c-section__entry"
      >
        <small
          class="c-section__stamp"
        >
          Last updated: Mock date
        </small>
        <div
          class="o-shell"
        >
          <h3>
            Gitlab contributions calendars
          </h3>
          <div
            class="c-calendar__outer"
          >
            <div
              class="c-calendar c-calendar--gitlab"
            >
              <div
                class="c-calendar__entry"
              >
                <h4>
                  Public Gitlab profile
                </h4>
                <div />
              </div>
              <div
                class="c-calendar__entry"
              >
                <h4>
                  Private Gitlab profile
                </h4>
                <div />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c-section__actions"
      >
        <button
          class="c-btn"
          type="button"
        >
          Get in touch
        </button>
        <ul
          class="c-section__actions-list"
        >
          <li>
            <button
              class="c-btn c-section__actions-close"
              type="button"
            >
              Close
            </button>
          </li>
          <li>
            <button
              class="c-btn"
              type="button"
            >
              <svg
                class="c-section__actions-icon"
              >
                <use
                  xlink:href="#svg-email"
                />
              </svg>
              <span>
                Contact me
              </span>
              <strong>
                directly
              </strong>
            </button>
          </li>
          <li>
            <a
              class="c-btn"
              href="https://app.usebraintrust.com/talent/782/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                class="c-section__actions-icon"
              >
                <use
                  xlink:href="#svg-braintrust"
                />
              </svg>
              <span>
                Hire me on
              </span>
              <strong>
                Braintrust
              </strong>
              <svg
                class="c-svg-external-link"
              >
                <use
                  xlink:href="#svg-external-link"
                />
              </svg>
            </a>
          </li>
          <li>
            <a
              class="c-btn"
              href="https://www.toptal.com/resume/atanas-atanasov"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                class="c-section__actions-icon"
              >
                <use
                  xlink:href="#svg-toptal"
                />
              </svg>
              <span>
                Hire me on
              </span>
              <strong>
                Toptal
              </strong>
              <svg
                class="c-svg-external-link"
              >
                <use
                  xlink:href="#svg-external-link"
                />
              </svg>
            </a>
          </li>
        </ul>
        <br
          class="visible-xs-block"
        />
        <a
          class="c-btn"
          href="/stats"
        >
          Go back
        </a>
      </div>
    </section>
  </main>
</DocumentFragment>
`;

exports[`GitlabStatsComponent component Should unmount the GitlabStatsComponent component 1`] = `<DocumentFragment />`;

exports[`NPMStatsComponent component Should render the NPMStatsComponent component 1`] = `
<DocumentFragment>
  <main
    class="o-main"
  >
    <section
      class="c-section c-section--stats"
      id="stats"
    >
      <header
        class="c-section__header"
      >
        <div
          class="o-shell"
        >
          <div
            class="c-section__animation"
            style="width: 150px; height: 150px; margin-left: auto; margin-right: auto;"
          />
          <h2>
            Stats
          </h2>
        </div>
      </header>
      <div
        class="c-section__entry c-section__entry--no-background c-section__entry--alt"
      >
        <div
          class="o-shell"
        >
          <h3>
            Statistics for NPM packages
          </h3>
          <h6>
            Total downloads: 
            <strong>
              591668
            </strong>
          </h6>
          <div
            class="o-grid c-packages"
          >
            <div
              class="o-grid__item xs-12 sm-6 md-4 lg-4"
            >
              <a
                class="c-package"
                href="https://example.com"
                rel="noopener noreferrer"
                target="_blank"
              >
                <h4>
                  package1
                </h4>
                <p>
                  Description 1
                </p>
                <ul>
                  <li>
                    Version 
                    <strong>
                      1.0.0
                    </strong>
                  </li>
                  <li>
                    Downloads: 
                    <strong>
                      0
                    </strong>
                  </li>
                  <li>
                    Author: 
                    <strong>
                      author
                    </strong>
                  </li>
                </ul>
                <svg
                  class="c-svg-external-link"
                >
                  <use
                    xlink:href="#svg-external-link"
                  />
                </svg>
              </a>
            </div>
            <div
              class="o-grid__item xs-12 sm-6 md-4 lg-4"
            >
              <a
                class="c-package"
                href="https://example.com"
                rel="noopener noreferrer"
                target="_blank"
              >
                <h4>
                  package2
                </h4>
                <p>
                  Description 2
                </p>
                <ul>
                  <li>
                    Version 
                    <strong>
                      1.0.0
                    </strong>
                  </li>
                  <li>
                    Downloads: 
                    <strong>
                      0
                    </strong>
                  </li>
                  <li>
                    Author: 
                    <strong>
                      author
                    </strong>
                  </li>
                </ul>
                <svg
                  class="c-svg-external-link"
                >
                  <use
                    xlink:href="#svg-external-link"
                  />
                </svg>
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c-section__actions"
      >
        <button
          class="c-btn"
          type="button"
        >
          Get in touch
        </button>
        <ul
          class="c-section__actions-list"
        >
          <li>
            <button
              class="c-btn c-section__actions-close"
              type="button"
            >
              Close
            </button>
          </li>
          <li>
            <button
              class="c-btn"
              type="button"
            >
              <svg
                class="c-section__actions-icon"
              >
                <use
                  xlink:href="#svg-email"
                />
              </svg>
              <span>
                Contact me
              </span>
              <strong>
                directly
              </strong>
            </button>
          </li>
          <li>
            <a
              class="c-btn"
              href="https://app.usebraintrust.com/talent/782/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                class="c-section__actions-icon"
              >
                <use
                  xlink:href="#svg-braintrust"
                />
              </svg>
              <span>
                Hire me on
              </span>
              <strong>
                Braintrust
              </strong>
              <svg
                class="c-svg-external-link"
              >
                <use
                  xlink:href="#svg-external-link"
                />
              </svg>
            </a>
          </li>
          <li>
            <a
              class="c-btn"
              href="https://www.toptal.com/resume/atanas-atanasov"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                class="c-section__actions-icon"
              >
                <use
                  xlink:href="#svg-toptal"
                />
              </svg>
              <span>
                Hire me on
              </span>
              <strong>
                Toptal
              </strong>
              <svg
                class="c-svg-external-link"
              >
                <use
                  xlink:href="#svg-external-link"
                />
              </svg>
            </a>
          </li>
        </ul>
        <br
          class="visible-xs-block"
        />
        <a
          class="c-btn"
          href="/stats"
        >
          Go back
        </a>
      </div>
    </section>
  </main>
</DocumentFragment>
`;

exports[`NPMStatsComponent component Should unmount the NPMStatsComponent component 1`] = `<DocumentFragment />`;

exports[`StatsComponent component Should render the StatsComponent component 1`] = `
<DocumentFragment>
  <main
    class="o-main"
  >
    <section
      class="c-section c-section--stats"
      id="stats"
    >
      <div
        class="o-shell"
      >
        <header
          class="c-section__header"
        >
          <div
            class="c-section__animation"
            style="width: 150px; height: 150px; margin-left: auto; margin-right: auto;"
          />
          <h2>
            Stats
          </h2>
        </header>
        <div
          class="c-section__grid o-grid"
        >
          <div
            class="o-grid__item xs-12 sm-6 md-4 lg-4 xl-4"
          >
            <a
              class="c-article-link fullsize-background"
              href="/stats/github"
              style="background-image: url(/images/temp/github.jpg);"
            >
              <strong>
                Github
              </strong>
            </a>
            <div
              class="c-loading"
            >
              <div
                class="c-loader"
              />
            </div>
          </div>
          <div
            class="o-grid__item xs-12 sm-6 md-4 lg-4 xl-4"
          >
            <a
              class="c-article-link fullsize-background"
              href="/stats/gitlab"
              style="background-image: url(/images/temp/gitlab.jpg);"
            >
              <strong>
                Gitlab
              </strong>
            </a>
            <div
              class="c-loading"
            >
              <div
                class="c-loader"
              />
            </div>
          </div>
          <div
            class="o-grid__item xs-12 sm-6 md-4 lg-4 xl-4"
          >
            <a
              class="c-article-link fullsize-background"
              href="/stats/npm"
              style="background-image: url(/images/temp/npm.jpg);"
            >
              <strong>
                NPM
              </strong>
            </a>
            <div
              class="c-loading"
            >
              <div
                class="c-loader"
              />
            </div>
          </div>
        </div>
        <div
          class="c-section__actions"
        >
          <button
            class="c-btn"
            type="button"
          >
            Get in touch
          </button>
          <ul
            class="c-section__actions-list"
          >
            <li>
              <button
                class="c-btn c-section__actions-close"
                type="button"
              >
                Close
              </button>
            </li>
            <li>
              <button
                class="c-btn"
                type="button"
              >
                <svg
                  class="c-section__actions-icon"
                >
                  <use
                    xlink:href="#svg-email"
                  />
                </svg>
                <span>
                  Contact me
                </span>
                <strong>
                  directly
                </strong>
              </button>
            </li>
            <li>
              <a
                class="c-btn"
                href="https://app.usebraintrust.com/talent/782/"
                rel="noopener noreferrer"
                target="_blank"
              >
                <svg
                  class="c-section__actions-icon"
                >
                  <use
                    xlink:href="#svg-braintrust"
                  />
                </svg>
                <span>
                  Hire me on
                </span>
                <strong>
                  Braintrust
                </strong>
                <svg
                  class="c-svg-external-link"
                >
                  <use
                    xlink:href="#svg-external-link"
                  />
                </svg>
              </a>
            </li>
            <li>
              <a
                class="c-btn"
                href="https://www.toptal.com/resume/atanas-atanasov"
                rel="noopener noreferrer"
                target="_blank"
              >
                <svg
                  class="c-section__actions-icon"
                >
                  <use
                    xlink:href="#svg-toptal"
                  />
                </svg>
                <span>
                  Hire me on
                </span>
                <strong>
                  Toptal
                </strong>
                <svg
                  class="c-svg-external-link"
                >
                  <use
                    xlink:href="#svg-external-link"
                  />
                </svg>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </section>
  </main>
</DocumentFragment>
`;

exports[`StatsComponent component Should unmount the StatsComponent component 1`] = `<DocumentFragment />`;
